[package]
name = "axum-middleware-mytutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
axum = {version = "0.7.5", features = ["macros"]}
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
# .env
dotenvy = "0.15.7"
# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# API document
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

